squash a bunch of warnings in IntelliJ
1. unnecessary @SuppressWarnings
2. assertEquals instead of more specialized asserts
3. method references